--- a/react-retake-exercise/src/index.css
+++ b/react-retake-exercise/src/index.css
@@ -23,3 +23,13 @@
   font-family: Arial, Helvetica, sans-serif;
   color: darkslategrey;
 }
+.student{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
+  padding: 10px;
+  border: 1px solid darkgrey;
+  
+}
+.student p{
+  margin: 0;
+}
